# sages

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: fortify.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.config.docker.py  app.config.py  build_linux.sh  configurations.json  init.py  init_db.sh  init_tables.py  pyproject.toml  pytest.ini  reset-admins.py  roles.config.py  setup.cfg  vims.spec
backend/connection-info/: connection-info--local.json
backend/i18n/: en.json  es.json
backend/src/vims/: types.py
backend/src/vims/app/: __main__.py  config.py  permissions.py  roles.py  settings.py
backend/src/vims/app/auth/: __init__.py  password.py
backend/src/vims/app/base/: __init__.py
backend/src/vims/app/dashboard/: __init__.py
backend/src/vims/app/database/: __init__.py  models.py
backend/src/vims/app/dataset/: __init__.py
backend/src/vims/app/datasource/: __init__.py
backend/src/vims/app/detector/: CusumSagesDetector.py  EWMA.py  Ears.py  __init__.py
backend/src/vims/app/detector/util/: FilterBaselineZeros3.py  TDistribution.py
backend/src/vims/app/etl/: ETLJob.py  __init__.py  models.py  utils.py
backend/src/vims/app/group/: __init__.py
backend/src/vims/app/locale/: __init__.py
backend/src/vims/app/model/: __init__.py  base.py  dashboard.py  dataset.py  datasource.py  etl.py  group.py  regionmap.py  token.py  user.py  visualization.py
backend/src/vims/app/regionmap/: __init__.py
backend/src/vims/app/role/: __init__.py
backend/src/vims/app/user/: __init__.py
backend/src/vims/app/visualization/: __init__.py
backend/src/vims/core/: __init__.py  config.py  container.py  logging.py  reference.py
backend/src/vims/databridge/: __init__.py
backend/src/vims/databridge/sql_alchemy/: __init__.py
backend/src/vims/databridge/vims/: __init__.py
backend/src/vims/test/: README.md  __init__.py  conftest.py  test_api.py  test_databridge_sql_alchemy.py  test_sqla_where_parser.py  test_utils.py
backend/src/vims/tools/: fernet.py  hashpw.py
backend/src/vims/util/: __init__.py  sqla_where_compiler.py
executable-files/: app.config.py  roles.config.py  roles.json  run.bat  run.sh
frontend/: .browserslistrc  .dockerignore  .eslintrc.js  .gitignore  Dockerfile  README.md  index.html  jsconfig.json  package.json  postcss.config.js  proxy.js  quasar.config.js
frontend/src/: App.vue
frontend/src/boot/: axios.js  i18n.js
frontend/src/components/: PageBreadcrumbs.vue  QueryBuilder.vue
frontend/src/composables/: dataset.js  utilities.js  visualization.js
frontend/src/css/: app.scss  (+1 more)
(+58 files in other folders)
