[metadata]
name = vims
author = Johns Hopkins Applied Physics Laboratory
author_email = sages@bitbucket.sages.org
description =SAGES
long_description = file: README.md
url = https://www.jhuapl.edu/sages
license = Proprietary
python_requires = >=3.9
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    aiofiles >= 24.1.0,<25.0.0
    colorama >= 0.4.4,<1.0.0
    cryptography >= 42.0.4,<44.0.0
    databases[postgresql,asyncmy,sqlite] >=0.6.2,<1.0.0
    email-validator >=2.0.0,<3.0.0
    epiweeks >=2.1.4,<3.0.0
    fastapi >=0.109.1,<1.0.0
    numpy >=1.22.2,<2.0.0
    pandas >= 2.2.2,<2.5.0
    polars >= 1.2.1,<2.0.0
    passlib[bcrypt] >=1.7.4,<2.0.0
    bcrypt==4.3.0
    psycopg2-binary >=2.9.3,<3.0.0
    pydantic[email] >=2.4.0,<3.4.0
    pytest >=7.1.1,<8.0.0
    pyarrow >= 20.0.0
    python-multipart >=0.0.7,<1.0.0
    uvicorn >=0.15.0,<1.0.0
    httpx >=0.23.0,<1.0.0
    pyjwt[crypto] >= 2.8.0, < 4.0.0
    xlsx2csv >= 0.8.1, < 1.0.0
    dotenv == 0.9.9
    openpyxl >=3.1.2, < 4.0.0
    aiocsv >= 1.2.5, < 2.0.0
    httpx >=0.26.0, < 1.0.0
    secure >= 0.3.0, < 0.4.0
    pyotp >= 2.9.0, < 3.0.0
    qrcode >= 8.0.0, < 9.0.0
    pillow >= 11.1.0, < 12.0.0

[options.packages.find]
where = src

[options.entry_points]
